k8sdemo/cmpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmpod
spec:
  containers:
    - name: test-container
      image: nginx
  restartPolicy: Never
