k8sdemo/mcpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mcpod
  labels:
    name: mcpod
spec:
  containers:
    - name: nginx
      image: nginx
    - name: hello
      image: gcr.io/google-samples/hello-app:1.0
