k8sdemo/hellonp.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellonp
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
