k8sdemo/hellosvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellosvc
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
