k8sdemo/hellowebnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellowebnet
spec:
  selector:
    matchLabels:
      app: hellowebnet
  template:
    metadata:
      labels:
        app: hellowebnet
    spec:
      containers:
        - name: hellowebnet
          image: yangchangjun/hellowebnet
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hellowebnet
spec:
  type: NodePort
  selector:
    app: hellowebnet
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32500
