k8sdemo/router.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hellov2
  ports:
    - port: 80
      targetPort: 8080
